[gd_scene load_steps=20 format=1]

[ext_resource path="res://Scripts/Planeta.gd" type="Script" id=1]
[ext_resource path="res://Sprites/EscudoPlaneta.png" type="Texture" id=2]
[ext_resource path="res://Escenas/Satelite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Planeta/Forma1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Planeta/Layer1_1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Planeta/Layer2_3.png" type="Texture" id=6]
[ext_resource path="res://Sounds/PLANETA.wav" type="Sample" id=7]
[ext_resource path="res://Sounds/gameOver.wav" type="Sample" id=8]
[ext_resource path="res://Sounds/planetaChoque.wav" type="Sample" id=9]
[ext_resource path="res://Sprites/UI/04B_30__.TTF" type="DynamicFontData" id=10]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 79.2386

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 91.4778

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 215.621

[sub_resource type="Animation" id=4]

resource/name = "Explotar"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Forma:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:config/emitting")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 2 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "ReiniciarPartida"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 1 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "gameOver"
} ]
}

[sub_resource type="Animation" id=5]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Proteccion/Proteccion:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.300549 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Forma:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]

resource/name = "choque"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Proteccion/Proteccion:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.278706 ) ]
}

[sub_resource type="ColorRamp" id=7]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 1, 1, 1, 1, 1, 1, 1, 0.523412 )

[sub_resource type="SampleLibrary" id=8]

samples/PLANETA = {
"db": 10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/gameOver = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/planetaChoque = {
"db": 6.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}

[sub_resource type="DynamicFont" id=9]

font/size = 50
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 10 )

[node name="Planeta" type="StaticBody2D"]

transform/pos = Vector2( 588.974, 381.276 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )

[node name="Proteccion" type="Area2D" parent="." groups=[
"planeta",
]]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Proteccion" type="Sprite" parent="Proteccion"]

transform/scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 2 )
modulate = Color( 1, 1, 1, 0.278706 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Proteccion"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="colision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Gravedad" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
space_override = 1
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 100.0
linear_damp = 0.1
angular_damp = 1.0

[node name="colision" type="CollisionShape2D" parent="Gravedad"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Explotar = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/choque = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Idle"

[node name="Satelite" parent="." instance=ExtResource( 3 )]

[node name="Forma" type="Sprite" parent="."]

editor/display_folded = true
transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="Layer1" type="Sprite" parent="Forma"]

texture = ExtResource( 5 )
modulate = Color( 1, 0, 0, 1 )

[node name="Layer2" type="Sprite" parent="Forma"]

texture = ExtResource( 6 )
modulate = Color( 0.851563, 0.00332642, 0.00332642, 1 )

[node name="Particles2D" type="Particles2D" parent="."]

config/amount = 50
config/lifetime = 2.0
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.15
config/texture = ExtResource( 4 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 100.0
params/spin_velocity = 1.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 10.0
params/tangential_accel = 30.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.2
params/final_size = 0.01
params/hue_variation = 0.0
params/anim_speed_scale = 0.0
params/anim_initial_pos = 0.0
randomness/initial_size = 1.0
color/color_ramp = SubResource( 7 )

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 8 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="gameOver" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -210.0
margin/top = -24.0
margin/right = 210.0
margin/bottom = 27.0
custom_fonts/font = SubResource( 9 )
text = "GAME OVER"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="area_enter" from="Proteccion" to="." method="_on_Proteccion_area_enter"]

[connection signal="body_enter" from="Proteccion" to="." method="_on_Proteccion_body_enter"]


